--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -19,8 +19,8 @@ jobs:
         - name: login
           uses: docker/login-action@v2
           with:
-            username:
-            password:
+            username: ${{secrets.DOCKER_USERNAME}}
+            password: ${{secrets.DOCKER_PASSWORD}}
 
         - name: build image
           run: |
