--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -26,6 +26,6 @@ jobs:
           run: |
             docker build -t demo .
 
-        - name: push image
+        - name: run image
           run: |
-            docker push demo:latest
+            docker run -d -p 5000:5000 demo
