--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
     build:
-        runs-on: windows-latest
+        runs-on: ubuntu-latest
 
         steps:
         - name: check out code
@@ -26,6 +26,10 @@ jobs:
           run: |
             docker build -t demo .
 
+        - name: run image
+          run: |
+            docker run -d -p 5000:5000 demo
+
         - name: push image
           run: |
-            docker push demo:latest
+            docker push rithika33/demo:latest 
