--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -28,7 +28,7 @@ jobs:
 
         - name: run image
           run: |
-            docker run -d -p 5000:5000 demo
+            docker run -d -p 5000:5000 ${{ secrets.DOCKER_USERNAME }}/demo:latest
 
         - name: push image
           run: |
